# ArtilleryOS

./: .gitignore  CMakeLists.txt  Dockerfile  GNUmakefile  LICENSE  Makefile  README.md  debug.md  grub.cfg  limine.cfg  linker.ld
kernel/: CMakeLists.txt  linker.ld
kernel/arch-86_64/: Readme.md  idt_load.asm  interruptstubs.asm
kernel/archx86_64/: idt.asm
kernel/descriptor_tables/: descriptor_tables.c  descriptor_tables.h  gdt.c  gdt.h  gdt.s  idt.c  idt.h  idt.s  irq.c  irq.h  isr.c  isr.h  isr_stubs.asm
kernel/driver/: cmos.c  keyboard.c  pic.c  vga_driver.c
kernel/idt/: idt.asm  idt.c  idt.h
kernel/include/: .#bootloader_chech.h  bootloader_util.h  common.h  config.h  cpu_info.h  e9_hack.h  gdt.h  idt.h  interrupt.h  io_port.h  kernel.h  ll_io.h  memory_util.h  multiboot.h  multiboot_module.h  multiboot_util.h  options.h  panic.h  pic.h  qemu_debug.h  qemu_log.h  registert.h  system.h  system_headers.h  timer.h  tty.h  tty_cursor.h  vga_color.h  vga_color_enum.h
kernel/interrupt/: interrupt.c  interrupt.h  interrupt_stub.s
kernel/libc/: math.c  stddef.c  stdio.c  stdio.h  stdlib.c  string.c  string.h  unistd.c
kernel/memory/: kheap.c  memory.md  memory.txt  page_table.c  paging.c  paging_enable.asm  pmm.c
kernel/modules/: modules.notes  test_module  test_module.asm
kernel/scripts/: linker.ld
kernel/src/: .#e9_hack.c  .#io_port.c  cpu_info.c  e9_hack.c  gdt.c  idt.c  interrupt.c  io_port.c  kernel.c  ll_io.c  memory_util.c  multiboot_module.c  multiboot_util.c  options.c  panic.c  pic.c  qemu_debug.c  qemu_log.c  timer.c  tty.c  tty_cursor.c
(+117 files in other folders)
